<resources>
    <string name="app_name">vistoriaFacil</string>
    <string name="button_vistorias">VISTORIA</string>
    <string name="button_vistPassoApasso">VISTORIA RÁPIDA: <i>Utilize se não tem dúvida sobre a edificação e os conceitos</i></string>
    <string name="button_VistoriaInteligente_Title">VISTORIA INTELIGENTE</string>
    <string name="button_VistoriaInteligente_Sub"><i>Passo a passo para realizar vistorias</i></string>
    <string name="button_ConsultaRapida">CONSULTA RÁPIDA</string>
    <string name="button_ConsultaRapidaSub"><i>Consulte todos os bizus e NTs</i></string>
    <string name="button_passoaPasso">SOLICITAR VISTORIA: PASSO-A-PASSO: <i>Guia para o contribuinte</i></string>
    <string name="button_certPrevia">CERTIFICAÇÃO PRÉVIA</string>
    <string name="tv_Tguia">Vistoria Inteligente</string>
    <string name="tv_orienta">Escolha o Tipo Da Edificação</string>
    <string name="button_A">A-Residêncial</string>
    <string name="button_B">B-Serviços De Hospedagem</string>
    <string name="button_C">C-Comercial</string>
    <string name="button_D">D-Serviço Profissional</string>
    <string name="button_E">E-Educacional E Cultura Física</string>
    <string name="button_F">F-Local De Reunião De Público</string>
    <string name="button_G">G-Serviço Automotivo E Assemelhados</string>
    <string name="button_H">H-Serviço De Saúde E Institucional</string>
    <string name="button_I">I-Indústria</string>
    <string name="button_J">J-Depósito</string>
    <string name="button_L">L-Explosivos</string>
    <string name="button_M">M-Especial</string>
    <string name="button_N">N-Setor Primário</string>
    <string name="tv_divaorienta">Especifique o Tipo Da Edificação</string>
    <string name="button_A1">A-1:Habitação unifamiliar: Condomínios de casas térreas ou assobradadas isoladas e assemelhados</string>
    <string name="button_A2">A-2:Habitação multifamiliar: Condomínios de casas térreas ou assobradadas não isoladas, edifícios de apartamentos em geral e condomínios verticais e assemelhados</string>
    <string name="button_A3">A-3:Habitação coletiva: Pensionatos, internatos, alojamentos, mosteiros, conventos, residências geriátricas. Todos com capacidade máxima de 16 leitos e assemelhados</string>
    <string name="button_B1">B-1:Hotel e assemelhado: Hotéis, motéis, pensões, hospedarias, pousadas, albergues, casas
        de cômodos e divisão A3 com mais de 16 leitos e assemelhados</string>
    <string name="button_B2">B-2:Hotel residencial: Hotéis e assemelhados com cozinha própria nos apartamentos
        (incluem-se apart-hotéis, flats, hotéis residenciais) e assemelhados</string>
    <string name="button_C1">C-1:Comércio com baixa carga de incêndio: Armarinhos, artigos de metal, louças, artigos
        hospitalares e outros</string>
    <string name="button_C2">C-2:Comércio com média e alta carga de incêndio: Edifícios de lojas de departamentos,
        magazines, galerias comerciais, supermercados em geral, mercados e outros</string>
    <string name="button_C3">C-3:Shoppings centers: Centro de compras em geral, feiras permanentes, shopping centers
        e outros</string>
    <string name="button_D1">D-1:Local para prestação de serviço profissional ou condução de negócios. Administração pública em geral.</string>
    <string name="button_D2">D-2:Agência bancária: Agências bancárias e assemelhadas.</string>
    <string name="button_D3">D-3:Serviço de reparação (exceto os classificados em G-4): Lavanderias, assistência técnica, reparação e
manutenção de aparelhos eletrodomésticos, chaveiros, pintura de letreiros e outros.</string>
    <string name="button_D4">D-4:Laboratório: Laboratórios de análises clínicas sem internação, laboratórios químicos,
fotográficos e assemelhados.</string>
    <string name="button_E1">E-1:Escola em geral: Escolas de primeiro, segundo e terceiro
graus, cursos supletivos, pré-universitários e assemelhados.</string>
    <string name="button_E2">E-2:Escola especial: Escolas de artes e artesanato, de línguas, de
cultura geral, de cultura estrangeira, escolas religiosas e assemelhados.</string>
    <string name="button_E3">E-3:Espaço para cultura física: Locais de ensino e/ou práticas de artes
marciais, ginásticas (artística, dança, musculação e outros) esportes coletivos (tênis, futebol e outros que não estejam
incluídos em F-3), sauna, casas de fisioterapia e assemelhados.</string>
    <string name="button_E4">E-4:Centro de treinamento profissional: Escolas profissionais em geral.</string>
    <string name="button_E5">E-5:Pré-escola: Creches, escolas maternais e de educação infantil e assemelhados.</string>
    <string name="button_E6">E-6:Escola para portadores de deficiências: Escolas para excepcionais, deficientes
visuais e auditivos e assemelhados.</string>
    <string name="button_F1">F-1:Local onde há objeto de valor inestimável: Museus, centro de documentos históricos,
bibliotecas e assemelhados.</string>
    <string name="button_F2">F-2:Local religioso e velório: Igrejas, capelas, sinagogas, mesquitas,
templos, cemitérios, crematórios, necrotérios, salas de funerais e assemelhados.</string>
    <string name="button_F3">F-3:Centro esportivo e de exibição: Estádios, ginásios e piscinas com
arquibancadas, rodeios, autódromos, sambódromos, arenas em geral, pista de patinação e assemelhados.</string>
    <string name="button_F4">F-4:Estação e terminal de passageiro: Estações rodoferroviárias, metrô, aeroportos,
heliponto, estações de transbordo em geral e assemelhados.</string>
    <string name="button_F5">F-5:Arte cênica e auditório: Teatros em geral, cinemas, óperas, auditórios
de estúdios de rádio e televisão, auditórios em geral e assemelhados.</string>
    <string name="button_F6">F-6:Boates: Casas Noturnas, danceterias, restaurantes
dançantes, pub´s e assemelhados.</string>
    <string name="button_F7">F-7:Eventos Temporários: Eventos temporários com concentração de público.</string>
    <string name="button_F8">F-8:Local para refeição: Restaurantes, lanchonetes, bares, cafés,
refeitórios, cantinas e assemelhados.</string>
    <string name="button_F9">F-9:Recreação pública: Jardim zoológico, parques recreativos e
assemelhados, instalados em edificações permanentes</string>
    <string name="button_F10">F-10:Exposição de objetos ou animais: Salões e salas de exposição de objetos e
animais, show-room, galerias de arte, aquários, planetários e assemelhados em edificações permanentes.</string>
    <string name="button_F11">F-11:Clubes sociais e Salões de Festas: Salões de Festas (buffet), clubes em geral,
bingo, bilhares, tiro ao alvo, boliche e assemelhados.</string>
    <string name="button_G1">G-1:Garagem sem acesso de público e sem abastecimento: Garagens automáticas.</string>
    <string name="button_G2">G-2:Garagem com acesso de público e sem abastecimento de combustível: Garagens coletivas sem automação, em
geral, sem abastecimento (exceto veículos de carga e coletivos).</string>
    <string name="button_G3">G-3:Local dotado de abastecimento de combustível: Postos de abastecimento de combustível e
serviço, garagens (exceto veículos de carga e coletivos).</string>
    <string name="button_G4">G-4:Serviço de conservação, manutenção e reparos: Oficinas de conserto de veículos,
borracharias (sem recauchutagem); oficinas e garagens de veículos de carga e coletivos, máquinas agrícolas e rodoviárias,
retificadoras de motores.</string>
    <string name="button_G5">G-5:Hangares: Abrigos para aeronaves com ou sem abastecimento de combustível.</string>
    <string name="button_G6">G-6:Marinas, portos, garagens náuticas: Gestão e atividades auxiliares de transporte
aquaviário.</string>
    <string name="button_H1">H-1:Hospital veterinário e assemelhados: Hospitais, clínicas e consultórios veterinários
e assemelhados (inclui-se alojamento com ou sem adestramento).</string>
    <string name="button_H2">H-2:Asilos, orfanatos, abrigos geriátricos, hospitais psiquiátricos, reformatórios,
tratamento de dependentes de drogas, álcool e assemelhados. Todos sem celas.</string>
    <string name="button_H3">H-3:Hospitais, casa de saúde, prontos-socorros, clínicas com internação, ambulatórios e
postos de atendimento de urgência, postos de saúde e puericultura e assemelhados com internação</string>
    <string name="button_H4">H-4:Quartéis, unidades de segurança pública e assemelhados: Quartéis, centrais de polícia, delegacias,
postos policiais, postos de bombeiros e assemelhados.</string>
    <string name="button_H5">H-5:Local onde a liberdade das pessoas sofre restrições: Hospitais psiquiátricos, manicômios,
reformatórios, prisões em geral (casa de detenção, penitenciárias, presídios) e instituições assemelhadas. Todos com celas.</string>
    <string name="button_H6">H-6:Clínica e consultório médico e odontológico: Clínicas médicas, consultórios em geral,
unidades de hemodiálise, ambulatórios e assemelhados. Todos sem internação.</string>
    <string name="button_I1">I-1:Indústrias com carga de incêndio de risco baixo: Atividades que manipulem materiais com
baixo risco de incêndio, tais como fábricas em geral, onde os processos não envolvem a utilização intensiva de materiais combustíveis
(aço; aparelhos de rádio e som; armas; artigos de metal; gesso; esculturas de pedra; ferramentas; fotogravuras; joias; relógios;
sabão; serralheria; suco de frutas; louças;
metais; máquinas).</string>
    <string name="button_I2">I-2:Indústrias com carga de incêndio de risco médio: Atividades que manipulam materiais com
médio risco de incêndio, tais como: artigos de vidro; automóveis, bebidas destiladas; instrumentos musicais; móveis; alimentos
marcenarias, fábricas de caixas e assemelhados.</string>
    <string name="button_M1">M-1:Túnel: Túnel rodoferroviário, destinado a transporte
de passageiros ou cargas diversas.</string>
    <string name="button_M2">M-2:Líquido ou gás, inflamáveis ou combustíveis: Edificação destinada à produção,
manipulação, armazenamento e distribuição de líquidos ou gases combustíveis e inflamáveis.</string>
    <string name="button_M3">M-3:Central de comunicação e energia: Central telefônica, centros de comunicação,
centrais de transmissão ou de distribuição de energia e assemelhados.</string>
    <string name="button_M4">M-4:Propriedade em transformação: Locais em construção ou demolição e assemelhados.</string>
    <string name="button_M5">M-5:Silos: Armazéns de grãos e assemelhados.</string>
    <string name="button_M6">M-6:Terra Selvagem: Floresta reserva ecológica, parque florestal e assemelhados.</string>
    <string name="button_M7">M-7:Pátio de Contêiner: Armazenamento de contêiner em área Aberta.</string>
    <string name="button_M8">M-8:Torres de telefonia móvel: Torre metálica com armários para
equipamentos de telefonia</string>
    <string name="button_M9">M-9:Transporte e Navegação: Atividades de transporte de passageiros ou
mercadorias, nas modalidades ferroviária, rodoviária, aquaviária e aérea (sem armazenamento).</string>
    <string name="button_M10">M-10:Resíduos: Coleta, tratamento e gestão de resíduos,
recuperação de materiais.</string>
    <string name="tv_altura">Informe a Altura da Edificação</string>
    <string name="bt_altura1">Edificação Térrea: Um pavimento</string>
    <string name="bt_altura2">Edificação Baixa: Menor que 6,00 m</string>
    <string name="bt_altura3">Edificação de Baixa-Média Altura: Entre 6,00 m E 12,00 m</string>
    <string name="bt_altura4">Edificação de Média Altura: Entre 12,00 m E 23,00 m</string>
    <string name="bt_altura5">Edificação Medianamente Alta: Entre 23,00 m E 30,00 m</string>
    <string name="bt_altura6">Edificação Alta: Acima de 30,00 m</string>
    <string name="bt_altura7">Edificação Alta: Acima de 60,00 m</string>
    <string name="bt_altura8">Edificação Alta: Acima de 80,00 m</string>
</resources>